--- a/client/src/app/modules/auth/modules/customer/components/orders/new-order/new-order.component.html
+++ b/client/src/app/modules/auth/modules/customer/components/orders/new-order/new-order.component.html
@@ -62,7 +62,7 @@
               <div>
                 Subtotal: {{order.subtotal | currency}}
               </div>
-              <div>
+              <div *ngIf="isFeeApplicable()">
                 Fee: {{order.fee | currency}} <fa-icon icon="question-circle" matTooltip="{{explainFee()}}" matTooltipPosition="right">
                 </fa-icon>                  
               </div>
@@ -134,7 +134,7 @@
               <div>
                 Subtotal: {{order.subtotal | currency}}
               </div>
-              <div>
+              <div *ngIf="isFeeApplicable()">
                 Fee: {{order.fee | currency}} <fa-icon icon="question-circle" matTooltip="{{explainFee()}}" matTooltipPosition="right">
                 </fa-icon>                  
               </div>
