--- a/client/src/app/modules/auth/modules/employee/components/statements/statement-detail/statement-detail.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/statements/statement-detail/statement-detail.component.html
@@ -55,6 +55,10 @@
           <div>
             Subtotal: {{statement.subtotalAmount | currency}}
           </div>
+          <div *ngIf="isFeeApplicable()">
+            Fee: {{statement.feeAmount | currency}} <fa-icon icon="question-circle" matTooltip="{{explainFee()}}" matTooltipPosition="right">
+            </fa-icon>
+          </div>
           <div *ngIf="statement.adjustAmount">
             Adjust: {{statement.adjustAmount | currency}} <a [routerLink]="" (click)="editAdjustAmount()"><fa-icon icon="edit"></fa-icon></a>
           </div>
