--- a/client/src/app/modules/auth/modules/employee/components/employee-layout/employee-layout.component.css
+++ b/client/src/app/modules/auth/modules/employee/components/employee-layout/employee-layout.component.css
@@ -87,3 +87,8 @@ main {
 .navbar-nav li a {
   line-height: 40px;
 }
+
+/* Adjust badge size. */
+:host ::ng-deep .fa-custom-counter {
+  transform: scale(0.8) translateX(50%) translateY(-50%);
+}
