--- a/client/src/app/modules/auth/modules/employee/components/employee-layout/employee-layout.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/employee-layout/employee-layout.component.html
@@ -6,6 +6,14 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto px-3">
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="messages">
+            <fa-layers>
+              <fa-icon icon="bell"></fa-icon>
+              <fa-layers-counter *ngIf="unreadMsgCount!=='0'" [content]="unreadMsgCount" [classes]="['fa-custom-counter']"></fa-layers-counter>
+            </fa-layers>
+          </a>
+        </li>
         <li class="nav-item" routerLinkActive="active"><a class="nav-link" (click)="settings()"><fa-icon icon="cog"></fa-icon></a></li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" role="button" id="userDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
