--- a/client/src/app/modules/auth/modules/employee/components/messages/messages/messages.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/messages/messages/messages.component.html
@@ -37,11 +37,15 @@
       </ng-container>
       <ng-container matColumnDef="from">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> FROM </th>
-        <td mat-cell *matCellDef="let row"> {{row.fromUser}} </td>
+        <td mat-cell *matCellDef="let row">
+          <div [ngClass]="row.read ? 'read' : 'unread'"> {{row.fromUser}} </div>
+        </td>
       </ng-container>
       <ng-container matColumnDef="subject">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> SUBJECT </th>
-        <td mat-cell *matCellDef="let row"> {{row.subject}} </td>
+        <td mat-cell *matCellDef="let row">
+          <div [ngClass]="row.read ? 'read' : 'unread'"> {{row.subject}} </div>
+        </td>
       </ng-container>
       <ng-container matColumnDef="createdAt">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> DATE </th>
