--- a/client/src/app/modules/auth/modules/employee/components/messages/messages/messages.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/messages/messages/messages.component.html
@@ -38,13 +38,13 @@
       <ng-container matColumnDef="from">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> FROM </th>
         <td mat-cell *matCellDef="let row">
-          <div [ngClass]="row.read ? 'read' : 'unread'"> {{row.fromUser}} </div>
+          <div [ngClass]="row.isRead ? 'read' : 'unread'"> {{row.fromUser}} </div>
         </td>
       </ng-container>
       <ng-container matColumnDef="subject">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> SUBJECT </th>
         <td mat-cell *matCellDef="let row">
-          <div [ngClass]="row.read ? 'read' : 'unread'"> {{row.subject}} </div>
+          <div [ngClass]="row.isRead ? 'read' : 'unread'"> {{row.subject}} </div>
         </td>
       </ng-container>
       <ng-container matColumnDef="createdAt">
