--- a/client/src/app/modules/auth/modules/employee/components/users/users/users.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/users/users/users.component.html
@@ -11,7 +11,7 @@
   <mat-form-field>
     <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
   </mat-form-field>
-  <div class="mat-elevation-z8">
+  <div class="users-container mat-elevation-z8">
     <table mat-table [dataSource]="getUsers()" matSort>
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
@@ -34,8 +34,13 @@
         <td mat-cell *matCellDef="let row"> {{row.createdDate | date:'shortDate'}} </td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{'selected': selection.isSelected(row)}" (click)="selection.select(row)"></tr>
     </table>
     <mat-paginator [pageSizeOptions]="[25, 50, 100]"></mat-paginator>
+  </div>
+</div>
+<div fxLayout="row wrap" fxLayoutGap="10px" fxLayoutAlign="start center" style="margin-top: 10px">
+  <div *ngIf="userSelected">
+    <app-user-logs [authId]=userSelected?.authId></app-user-logs>
   </div>
 </div>
