--- a/client/src/app/modules/auth/modules/employee/components/statements/statements/statements.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/statements/statements/statements.component.html
@@ -12,7 +12,7 @@
     <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
   </mat-form-field>
   <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="statements" matSort>
+    <table mat-table [dataSource]="statements" matSort matSortActive="id" matSortDirection="desc">
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
         <td mat-cell *matCellDef="let row"><a [routerLink]="[row.id]">{{row.id}}</a></td>
